crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__integer_enum_with_variant_default_snapshot@integer_enum_with_variant_default_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

type TaskRunStatus int

const (
    TaskRunStatusPending TaskRunStatus = 0
    TaskRunStatusCompleted TaskRunStatus = 100
)

type TaskRuns struct {
    ID int32 `gorm:"column:id;not null" json:"id"`
    Status TaskRunStatus `gorm:"column:status;not null;default:Completed" json:"status"`
}

func (TaskRuns) TableName() string { return "task_runs" }
