crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__integer_enum_with_variant_default_snapshot@integer_enum_with_variant_default_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
enum TaskRunStatus {
  PENDING // = 0
  COMPLETED // = 100
}

model TaskRuns {
  id Int
  status TaskRunStatus @default(dbgenerated("Completed"))

  @@map("task_runs")
}
