crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__json_default_snapshot@json_default_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class Configs(models.Model):
    id = models.IntegerField(primary_key=True)
    data = models.JSONField()

    class Meta:
        db_table = "configs"
