crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__json_default_snapshot@json_default_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

import (
    "gorm.io/datatypes"
)

type Configs struct {
    ID int32 `gorm:"column:id;primaryKey" json:"id"`
    Data datatypes.JSON `gorm:"column:data;not null" json:"data"`
}

func (Configs) TableName() string { return "configs" }
