crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__jsonb_custom_type_snapshot@jsonb_custom_type_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class JsonStruct(models.Model):
    id = models.IntegerField()
    json_data = models.JSONField()
    jsonb_data = models.TextField()
    jsonb_nullable = models.TextField(null=True, blank=True)

    class Meta:
        db_table = "json_struct"
