crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__junction_over_composite_key_snapshot@junction_over_composite_key_Gorm.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
package models

type User struct {
    ID int32 `gorm:"column:id;primaryKey" json:"id"`
    ArticleUsers []ArticleUser `gorm:"foreignKey:UserID" json:"-"`
}

func (User) TableName() string { return "user" }


type Article struct {
    MediaID int32 `gorm:"column:media_id;primaryKey" json:"media_id"`
    ID int32 `gorm:"column:id;primaryKey" json:"id"`
    ArticleUsers []ArticleUser `gorm:"foreignKey:MediaID,ArticleID;references:MediaID,ID" json:"-"`
}

func (Article) TableName() string { return "article" }


type ArticleUser struct {
    MediaID int32 `gorm:"column:media_id;primaryKey" json:"media_id"`
    ArticleID int32 `gorm:"column:article_id;primaryKey" json:"article_id"`
    UserID int32 `gorm:"column:user_id;primaryKey" json:"user_id"`
    User User `gorm:"foreignKey:UserID" json:"-"`
    Article Article `gorm:"foreignKey:MediaID,ArticleID;references:MediaID,ID" json:"-"`
}

func (ArticleUser) TableName() string { return "article_user" }
