crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__no_description_snapshot@no_description_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class NoDesc(models.Model):
    id = models.IntegerField(primary_key=True)

    class Meta:
        db_table = "no_desc"
